# vision_opencv

./: .gitignore  Dockerfile  dependency.repos
cv_bridge/: CMakeLists.txt  package.xml
cv_bridge/include/cv_bridge/: cv_bridge.h  rgb_colors.h
cv_bridge/src/: CMakeLists.txt  cv_bridge.cpp  module.cpp  module.hpp  module_opencv2.cpp  module_opencv3.cpp  rgb_colors.cpp
cv_bridge/test/: CMakeLists.txt  test_compression.cpp  test_endian.cpp  test_rgb_colors.cpp  utest.cpp  utest2.cpp
image_geometry/: CMakeLists.txt  package.xml
image_geometry/include/image_geometry/: pinhole_camera_model.hpp  stereo_camera_model.hpp  visibility_control.hpp
image_geometry/src/: pinhole_camera_model.cpp  stereo_camera_model.cpp
image_geometry/test/: utest.cpp  utest_equi.cpp
opencv_components/: CMakeLists.txt  package.xml
opencv_components/include/cv_bridge/: cv_bridge.hpp  cv_mat_sensor_msgs_image_type_adapter.hpp  rgb_colors.hpp
opencv_components/include/opencv_components/: hungarian.hpp  multi_object_tracker.hpp  opencv_camera_component.hpp  opencv_mark_match.hpp  tracking_component.hpp  util.hpp  visibility_control.h
opencv_components/parameters/: opencv_camera_parameters.yaml  opencv_match_parameters.yaml
opencv_components/src/: multi_object_tracker.cpp  opencv_camera_component.cpp  opencv_camera_node.cpp  opencv_mark_match.cpp  opencv_mark_node.cpp  tracking_component.cpp  tracking_node.cpp  util.cpp
opencv_components/src/cv_bridge/: cv_bridge.cpp
opencv_vendor/: CMakeLists.txt  package.xml
