<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>opencv_components</name>
  <version>3.4.0</version>
  <description>ROS 2 components using opencv</description>
  <maintainer email="ms.kataoka@gmail.com">Masaya Kataoka</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>boost</depend>
  <depend>generate_parameter_library</depend>
  <depend>image_transport</depend>
  <depend>launch</depend>
  <depend>message_filters</depend>
  <depend>opencv_vendor</depend>
  <depend>perception_msgs</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp</depend>
  <depend>vision_msgs</depend>
  <depend>ament_index_cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ouxt_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
